# adjusted-p-values-avg

./: AuxiliaryFunctions.cpp  CMakeLists.txt  InputData.h  InputDataBase.cpp  InputDataBase.h  InputFile.cpp  InputFile.h  InputPLINK.cpp  InputPLINK.h  PValue.cpp  PValue.h  PerformanceTests.cpp  PerformanceTests.h  backupfile_for_adjustpvaluetest.sql  main.cpp  performancetest.txt
TestData/: newgenotypedatatest14  newgenotypedatatest2  newgenotypedatatest5  newphenotypedatatest13
Tests/: InputDataBaseTests.cpp  InputFileTests.cpp  PValueTests.cpp
docs/: readme.md
